src/gen/antlr/br/usp/each/antlr/tutorial/SampleParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g 2011-09-07 13:36:11

	package br.usp.each.antlr.tutorial;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class SampleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identificador", "NumeroInteiro", "StringLiteral", "CharLiteral", "Digito", "Espacamento", "LetraCaixaAlta", "LetraCaixaBaixa", "Letras", "QuebraDeLinha", "Tabulacao", "CaracteresIgnorados", "ComentarioDeLinhaUnica", "ComentarioDeMultiplasLinhas", "'program'", "'='", "'begin'", "'end'", "'.'", "'constant'", "':'", "':='", "';'", "'var'", "','", "'Integer'", "'Boolean'", "'String'", "'Char'", "'type'", "'array'", "'['", "'..'", "']'", "'of'", "'record'", "'<'", "'>'", "'('", "')'", "'if'", "'then'", "'elsif'", "'else'", "'exit'", "'when'", "'loop'", "'while'", "'return'", "'procedure'", "'function'", "'not'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'!='", "'<='", "'>='", "'and'", "'or'"
    };
    public static final int EOF=-1;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int Identificador=4;
    public static final int NumeroInteiro=5;
    public static final int StringLiteral=6;
    public static final int CharLiteral=7;
    public static final int Digito=8;
    public static final int Espacamento=9;
    public static final int LetraCaixaAlta=10;
    public static final int LetraCaixaBaixa=11;
    public static final int Letras=12;
    public static final int QuebraDeLinha=13;
    public static final int Tabulacao=14;
    public static final int CaracteresIgnorados=15;
    public static final int ComentarioDeLinhaUnica=16;
    public static final int ComentarioDeMultiplasLinhas=17;

    // delegates
    // delegators


        public SampleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SampleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SampleParser.tokenNames; }
    public String getGrammarFileName() { return "/host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g"; }



    // $ANTLR start "program"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:16:1: program : 'program' Identificador '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' Identificador '.' ;
    public final void program() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:17:2: ( 'program' Identificador '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' Identificador '.' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:17:4: 'program' Identificador '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' Identificador '.'
            {
            match(input,18,FOLLOW_18_in_program41); 
            match(input,Identificador,FOLLOW_Identificador_in_program43); 
            match(input,19,FOLLOW_19_in_program45); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:3: ( constant | variable | function | procedure | typeDecl )*
            loop1:
            do {
                int alt1=6;
                switch ( input.LA(1) ) {
                case 23:
                    {
                    alt1=1;
                    }
                    break;
                case 27:
                    {
                    alt1=2;
                    }
                    break;
                case 54:
                    {
                    alt1=3;
                    }
                    break;
                case 53:
                    {
                    alt1=4;
                    }
                    break;
                case 33:
                    {
                    alt1=5;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:4: constant
            	    {
            	    pushFollow(FOLLOW_constant_in_program50);
            	    constant();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:15: variable
            	    {
            	    pushFollow(FOLLOW_variable_in_program54);
            	    variable();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:26: function
            	    {
            	    pushFollow(FOLLOW_function_in_program58);
            	    function();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:37: procedure
            	    {
            	    pushFollow(FOLLOW_procedure_in_program62);
            	    procedure();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:18:49: typeDecl
            	    {
            	    pushFollow(FOLLOW_typeDecl_in_program66);
            	    typeDecl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,20,FOLLOW_20_in_program72); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:20:3: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==Identificador||LA2_0==44||(LA2_0>=50 && LA2_0<=51)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:20:3: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program76);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,21,FOLLOW_21_in_program81); 
            match(input,Identificador,FOLLOW_Identificador_in_program83); 
            match(input,22,FOLLOW_22_in_program85); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "constant"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:23:1: constant : 'constant' Identificador ':' type ':=' expression ';' ;
    public final void constant() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:24:2: ( 'constant' Identificador ':' type ':=' expression ';' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:24:4: 'constant' Identificador ':' type ':=' expression ';'
            {
            match(input,23,FOLLOW_23_in_constant96); 
            match(input,Identificador,FOLLOW_Identificador_in_constant98); 
            match(input,24,FOLLOW_24_in_constant100); 
            pushFollow(FOLLOW_type_in_constant102);
            type();

            state._fsp--;

            match(input,25,FOLLOW_25_in_constant104); 
            pushFollow(FOLLOW_expression_in_constant106);
            expression();

            state._fsp--;

            match(input,26,FOLLOW_26_in_constant108); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "constant"


    // $ANTLR start "variable"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:27:1: variable : 'var' Identificador ( ',' Identificador )* ':' type ( ':=' expression )? ';' ;
    public final void variable() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:2: ( 'var' Identificador ( ',' Identificador )* ':' type ( ':=' expression )? ';' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:4: 'var' Identificador ( ',' Identificador )* ':' type ( ':=' expression )? ';'
            {
            match(input,27,FOLLOW_27_in_variable121); 
            match(input,Identificador,FOLLOW_Identificador_in_variable123); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:24: ( ',' Identificador )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==28) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:25: ',' Identificador
            	    {
            	    match(input,28,FOLLOW_28_in_variable126); 
            	    match(input,Identificador,FOLLOW_Identificador_in_variable128); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,24,FOLLOW_24_in_variable132); 
            pushFollow(FOLLOW_type_in_variable134);
            type();

            state._fsp--;

            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:54: ( ':=' expression )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==25) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:28:55: ':=' expression
                    {
                    match(input,25,FOLLOW_25_in_variable137); 
                    pushFollow(FOLLOW_expression_in_variable139);
                    expression();

                    state._fsp--;


                    }
                    break;

            }

            match(input,26,FOLLOW_26_in_variable143); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variable"


    // $ANTLR start "type"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:31:1: type : ( 'Integer' | 'Boolean' | 'String' | 'Char' | typeSpec | Identificador );
    public final void type() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:32:2: ( 'Integer' | 'Boolean' | 'String' | 'Char' | typeSpec | Identificador )
            int alt5=6;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt5=1;
                }
                break;
            case 30:
                {
                alt5=2;
                }
                break;
            case 31:
                {
                alt5=3;
                }
                break;
            case 32:
                {
                alt5=4;
                }
                break;
            case 34:
            case 39:
            case 40:
                {
                alt5=5;
                }
                break;
            case Identificador:
                {
                alt5=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:32:4: 'Integer'
                    {
                    match(input,29,FOLLOW_29_in_type155); 

                    }
                    break;
                case 2 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:33:4: 'Boolean'
                    {
                    match(input,30,FOLLOW_30_in_type160); 

                    }
                    break;
                case 3 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:34:4: 'String'
                    {
                    match(input,31,FOLLOW_31_in_type165); 

                    }
                    break;
                case 4 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:35:4: 'Char'
                    {
                    match(input,32,FOLLOW_32_in_type170); 

                    }
                    break;
                case 5 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:36:4: typeSpec
                    {
                    pushFollow(FOLLOW_typeSpec_in_type175);
                    typeSpec();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:37:4: Identificador
                    {
                    match(input,Identificador,FOLLOW_Identificador_in_type180); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "type"


    // $ANTLR start "typeSpec"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:40:1: typeSpec : ( arrayType | recordType | enumType );
    public final void typeSpec() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:41:2: ( arrayType | recordType | enumType )
            int alt6=3;
            switch ( input.LA(1) ) {
            case 34:
                {
                alt6=1;
                }
                break;
            case 39:
                {
                alt6=2;
                }
                break;
            case 40:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:41:4: arrayType
                    {
                    pushFollow(FOLLOW_arrayType_in_typeSpec192);
                    arrayType();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:42:4: recordType
                    {
                    pushFollow(FOLLOW_recordType_in_typeSpec197);
                    recordType();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:43:4: enumType
                    {
                    pushFollow(FOLLOW_enumType_in_typeSpec202);
                    enumType();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "typeSpec"


    // $ANTLR start "typeDecl"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:46:1: typeDecl : 'type' Identificador '=' typeSpec ';' ;
    public final void typeDecl() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:47:2: ( 'type' Identificador '=' typeSpec ';' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:47:4: 'type' Identificador '=' typeSpec ';'
            {
            match(input,33,FOLLOW_33_in_typeDecl214); 
            match(input,Identificador,FOLLOW_Identificador_in_typeDecl216); 
            match(input,19,FOLLOW_19_in_typeDecl218); 
            pushFollow(FOLLOW_typeSpec_in_typeDecl220);
            typeSpec();

            state._fsp--;

            match(input,26,FOLLOW_26_in_typeDecl222); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "typeDecl"


    // $ANTLR start "arrayType"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:51:1: arrayType : 'array' '[' NumeroInteiro '..' NumeroInteiro ']' 'of' type ;
    public final void arrayType() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:52:2: ( 'array' '[' NumeroInteiro '..' NumeroInteiro ']' 'of' type )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:52:4: 'array' '[' NumeroInteiro '..' NumeroInteiro ']' 'of' type
            {
            match(input,34,FOLLOW_34_in_arrayType235); 
            match(input,35,FOLLOW_35_in_arrayType237); 
            match(input,NumeroInteiro,FOLLOW_NumeroInteiro_in_arrayType239); 
            match(input,36,FOLLOW_36_in_arrayType241); 
            match(input,NumeroInteiro,FOLLOW_NumeroInteiro_in_arrayType243); 
            match(input,37,FOLLOW_37_in_arrayType245); 
            match(input,38,FOLLOW_38_in_arrayType247); 
            pushFollow(FOLLOW_type_in_arrayType249);
            type();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "arrayType"


    // $ANTLR start "recordType"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:55:1: recordType : 'record' ( field )* 'end' 'record' ;
    public final void recordType() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:56:2: ( 'record' ( field )* 'end' 'record' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:56:4: 'record' ( field )* 'end' 'record'
            {
            match(input,39,FOLLOW_39_in_recordType261); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:56:13: ( field )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==Identificador) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:56:13: field
            	    {
            	    pushFollow(FOLLOW_field_in_recordType263);
            	    field();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,21,FOLLOW_21_in_recordType266); 
            match(input,39,FOLLOW_39_in_recordType268); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "recordType"


    // $ANTLR start "enumType"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:59:1: enumType : '<' Identificador ( ',' Identificador )* '>' ;
    public final void enumType() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:60:2: ( '<' Identificador ( ',' Identificador )* '>' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:60:5: '<' Identificador ( ',' Identificador )* '>'
            {
            match(input,40,FOLLOW_40_in_enumType281); 
            match(input,Identificador,FOLLOW_Identificador_in_enumType283); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:60:23: ( ',' Identificador )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==28) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:60:24: ',' Identificador
            	    {
            	    match(input,28,FOLLOW_28_in_enumType286); 
            	    match(input,Identificador,FOLLOW_Identificador_in_enumType288); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            match(input,41,FOLLOW_41_in_enumType292); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "enumType"


    // $ANTLR start "field"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:63:1: field : Identificador ':' type ';' ;
    public final void field() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:64:2: ( Identificador ':' type ';' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:64:4: Identificador ':' type ';'
            {
            match(input,Identificador,FOLLOW_Identificador_in_field305); 
            match(input,24,FOLLOW_24_in_field307); 
            pushFollow(FOLLOW_type_in_field309);
            type();

            state._fsp--;

            match(input,26,FOLLOW_26_in_field311); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "field"


    // $ANTLR start "statement"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:67:1: statement : ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement );
    public final void statement() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:68:2: ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement )
            int alt9=5;
            switch ( input.LA(1) ) {
            case Identificador:
                {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==25) ) {
                    alt9=1;
                }
                else if ( (LA9_1==42) ) {
                    alt9=5;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;
                }
                }
                break;
            case 44:
                {
                alt9=2;
                }
                break;
            case 50:
                {
                alt9=3;
                }
                break;
            case 51:
                {
                alt9=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:68:4: assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement323);
                    assignmentStatement();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:69:4: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement328);
                    ifStatement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:70:4: loopStatement
                    {
                    pushFollow(FOLLOW_loopStatement_in_statement333);
                    loopStatement();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:71:4: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement338);
                    whileStatement();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:72:4: procedureCallStatement
                    {
                    pushFollow(FOLLOW_procedureCallStatement_in_statement343);
                    procedureCallStatement();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "procedureCallStatement"
    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:75:1: procedureCallStatement : Identificador '(' ( actualParameters )? ')' ';' ;
    public final void procedureCallStatement() throws RecognitionException {
        try {
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:76:2: ( Identificador '(' ( actualParameters )? ')' ';' )
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:76:4: Identificador '(' ( actualParameters )? ')' ';'
            {
            match(input,Identificador,FOLLOW_Identificador_in_procedureCallStatement355); 
            match(input,42,FOLLOW_42_in_procedureCallStatement357); 
            // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:76:22: ( actualParameters )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( ((LA10_0>=Identificador && LA10_0<=CharLiteral)||LA10_0==42||(LA10_0>=55 && LA10_0<=57)) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /host/works/Desenvolvimento/Java/workspace/Antlr-Tutorial/src/main/java/br/usp/each/antlr/tutorial/Sample.g:76:22: actualParameters
                    {
                    pushFollow(FOLLOW_actualParameters_in_procedureCallStatement359);
                    actualParameters();

                    state._fsp--;


                    }
                    break;

            }
